--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "clsx": "^1.2.1",
+    "firebase": "^9.14.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-button": "^0.7.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "uuid": "^9.0.0",
