--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "clsx": "^1.2.1",
     "firebase": "^9.14.0",
+    "firebase-admin": "^11.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-button": "^0.7.2",
