--- a/firebase.json
+++ b/firebase.json
@@ -2,11 +2,10 @@
   "hosting": {
     "public": "build",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-    "appAssociation": "AUTO",
     "rewrites": [
       {
-        "source": "/**",
-        "dynamicLinks": true
+        "source": "**",
+        "destination": "/index.html"
       }
     ]
   }
